# keycloak-manager

./: .env  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
